<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.richardo.animeku.detail.DetailViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorDark"
            android:fillViewport="true"
            android:fitsSystemWindows="true"
            tools:context=".detail.DetailFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:isGone="@{viewmodel.anime == null ? false : true}">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/detail_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:elevation="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:navigationIcon="@drawable/abc_vector_test" />

                <ImageView
                    android:id="@+id/img_detail_cover"
                    android:layout_width="0dp"
                    android:layout_height="250dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:imageFromUrl="@{viewmodel.anime.bannerImage}"
                    tools:src="@drawable/gintama1" />

                <ImageView
                    android:id="@+id/img_detail_bg"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="@+id/img_detail_cover"
                    app:layout_constraintEnd_toEndOf="@+id/img_detail_cover"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/img_detail_cover"
                    android:src="@drawable/gradient_bg" />

                <ImageView
                    android:id="@+id/img_detail"
                    android:layout_width="125dp"
                    android:layout_height="175dp"
                    android:layout_marginStart="16dp"
                    app:imageFromUrl="@{viewmodel.anime.coverImage.extraLarge}"
                    app:layout_constraintBottom_toBottomOf="@+id/img_detail_cover"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_detail_cover"
                    tools:src="@drawable/gintama2" />

                <TextView
                    android:id="@+id/tv_detail_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/poppins"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:text="@{viewmodel.anime.title.romaji}"
                    app:layout_constraintEnd_toStartOf="@+id/floatingActionButton"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/img_detail"
                    app:layout_constraintTop_toBottomOf="@+id/img_detail_bg"
                    tools:text="Gintama : Silver Soul" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floatingActionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:clickable="true"
                    android:src="@drawable/ic_baseline_favorite_border_24"
                    app:layout_constraintBottom_toBottomOf="@+id/img_detail_cover"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_detail_cover" />

                <RatingBar
                    android:id="@+id/rating_detail"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:numStars="5"
                    android:progressBackgroundTint="#FFFFFF"
                    app:setRating="@{viewmodel.anime.averageScore}"
                    app:layout_constraintEnd_toEndOf="@+id/img_detail"
                    app:layout_constraintStart_toStartOf="@+id/img_detail"
                    app:layout_constraintTop_toBottomOf="@+id/img_detail" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:text="@string/overview"
                    android:textColor="#FFFFFF"
                    app:layout_constraintStart_toStartOf="@+id/img_detail"
                    app:layout_constraintTop_toBottomOf="@id/barrier" />

                <View
                    android:id="@+id/view"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="#A8A8A8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView8"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" />

                <TextView
                    android:id="@+id/tv_detail_overview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/textLightBlue"
                    android:textSize="12sp"
                    app:HtmlRenderDescription="@{viewmodel.anime.description}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView8"
                    app:layout_constraintTop_toTopOf="@+id/view"
                    tools:text="@string/sample_overview" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:text="@string/details"
                    android:textColor="#FFFFFF"
                    app:layout_constraintStart_toStartOf="@+id/tv_detail_overview"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_overview" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="#BFBDBD"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView10"
                    app:layout_constraintTop_toBottomOf="@+id/textView10" />

                <TextView
                    android:id="@+id/tv_detail_type"
                    style="@style/detail_style"
                    android:layout_marginTop="24dp"
                    tools:text="Type :"
                    android:text="@{@string/type(viewmodel.anime.format)}"
                    app:layout_constraintStart_toStartOf="@+id/view2"
                    app:layout_constraintTop_toTopOf="@+id/view2" />

                <TextView
                    android:id="@+id/tv_detail_eps"
                    style="@style/detail_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:setEpisode="@{viewmodel.anime}"
                    app:layout_constraintStart_toStartOf="@+id/tv_detail_type"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_type" />

                <TextView
                    android:id="@+id/tv_detail_status"
                    style="@style/detail_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/status"
                    app:setStatus="@{viewmodel.anime}"
                    app:layout_constraintStart_toStartOf="@+id/tv_detail_eps"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_eps" />

                <TextView
                    android:id="@+id/tv_detail_genre"
                    style="@style/detail_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/genres"
                    app:setGenre="@{viewmodel.anime}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tv_detail_status"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_status" />

                <TextView
                    android:id="@+id/tv_detail_duration"
                    style="@style/detail_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:setDuration="@{viewmodel.anime.duration}"
                    app:layout_constraintStart_toStartOf="@+id/tv_detail_status"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_genre" />

                <TextView
                    android:id="@+id/tv_detail_start_date"
                    style="@style/detail_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/start_date"
                    app:setStartDate="@{viewmodel.anime}"
                    app:layout_constraintStart_toStartOf="@+id/tv_detail_genre"
                    app:layout_constraintTop_toBottomOf="@id/tv_detail_duration" />

                <TextView
                    android:id="@+id/tv_heading_characters"
                    android:text="@string/characters"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_studio"
                    style="@style/heading_detail_style" />

                <TextView
                    android:id="@+id/tv_detail_studio"
                    style="@style/detail_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/studio"
                    app:setStudio="@{viewmodel.anime}"
                    app:layout_constraintStart_toStartOf="@+id/tv_detail_duration"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_start_date" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_characters"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_heading_characters">

                </androidx.recyclerview.widget.RecyclerView>

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="tv_detail_title,rating_detail"
                    tools:layout_editor_absoluteY="293dp" />

                <TextView
                    android:id="@+id/tv_heading_voice_actor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/bgLightBlue"
                    android:padding="10dp"
                    android:text="@string/voice_actors"
                    android:textColor="#FFFFFF"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rv_characters" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_voice_actors"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_heading_voice_actor" />

                <TextView
                    android:id="@+id/tv_heading_relation"
                    style="@style/heading_detail_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/relation_heading"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rv_voice_actors" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_relation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_heading_relation" />

                <TextView
                    android:id="@+id/tv_heading_recommendation"
                    style="@style/heading_detail_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/heading_recomdation"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rv_relation" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_recommendations"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_heading_recommendation" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <ProgressBar
            android:id="@+id/pb_detail"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:isGone="@{viewmodel.anime == null ? true : false}" />

    </FrameLayout>

</layout>